Revert react-scripts from 5.0.0 to 4.0.3 to fix compatibility issues and disable the buggy React error overlay (in dev mode it was just adding an INT_MAX z-index invisible iframe with no contents...)

--- a/src/index.css
+++ b/src/index.css
@@ -174,3 +174,8 @@
 .dropdown svg {
   margin-bottom: 3%;
 }
+
+/* hide react error overlay */
+iframe {
+  display: none;
+}
